# KinectFusion

./: CMakeLists.txt  Compile.sh  config.json
src/: CMakeLists.txt  KinectFusion.cu  KinectFusion.h  TestConfigurator.cpp  Visualizer.cc  Visualizer.h  Volume.cu  Volume.h  helpers.cu  helpers.h  test.cc  testeigen.cc
src/Utility/: CudaToolKit.h  GLHelpers.h  LocalConfigurator.cu  LocalConfigurator.h  ToolKitHeader.h  Types.h
